k8s/k8s-keycloak-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-mysql
  template:
    metadata:
      labels:
        app: keycloak-mysql
    spec:
      containers:
        - name: keycloak-mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: keycloak-mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: keycloak-mysql-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-mysql
spec:
  selector:
    app: keycloak-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
