k8s/k8s-mysql-inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-inventory
  template:
    metadata:
      labels:
        app: mysql-inventory
    spec:
      containers:
        - name: mysql-inventory
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-inventory-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-inventory-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-inventory
spec:
  selector:
    app: mysql-inventory
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
